--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
 		"rrule-alt": "^2.2.8",
 		"simple-git": "^1.85.0",
 		"socket.io": "^2.1.1",
-		"valid-url": "latest"
+		"valid-url": "latest",
+		"body-parser": "latest"
 	},
 	"_moduleAliases": {
 		"node_helper": "js/node_helper.js"
