--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"electron": "^11.0.4"
 	},
 	"dependencies": {
+		"body-parser": "latest",
 		"colors": "^1.1.2",
 		"console-stamp": "^0.2.9",
 		"eslint": "^7.3.0",
@@ -78,13 +79,13 @@
 		"lodash": "^4.17.15",
 		"module-alias": "^2.2.2",
 		"moment": "^2.27.0",
+		"node-ical": "^0.12.5",
 		"request": "^2.88.2",
 		"rrule": "^2.6.2",
 		"rrule-alt": "^2.2.8",
 		"simple-git": "^1.85.0",
 		"socket.io": "^2.1.1",
-		"valid-url": "latest",
-		"body-parser": "latest"
+		"valid-url": "latest"
 	},
 	"_moduleAliases": {
 		"node_helper": "js/node_helper.js"
